<resources>
    <string name="app_name">Apollo Professor\'s Grade Book</string>
    <string name="activity_classes_title">Classes</string>
    <string name="activity_settings_title">Settings</string>
    <string name="action_new_class">New Class</string>
    <string name="action_students">Students</string>
    <string name="action_settings">Settings</string>
    <string name="action_lock">Lock</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_new">New</string>
    <string name="action_new_schedule">New Schedule</string>
    <string name="action_new_grade_breakdown">New Grade Breakdown</string>
    <string name="action_new_note">New Note</string>
    <string name="action_new_item">New Activity</string>
    <string name="action_new_student">New Student</string>
    <string name="action_existing_students">Students From Other Classes</string>
    <string name="action_grade_breakdown">Grade Breakdown</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_last_name">Last Name</string>
    <string name="action_sort_first_name">First Name</string>
    <string name="action_sort_attendance">Attendance</string>
    <string name="action_sort_score">Score</string>
    <string name="action_sort_submission_date">Date Submitted</string>
    <string name="action_sort_description">Description</string>
    <string name="action_sort_date">Date</string>
    <string name="action_sort_activity">Activity</string>
    <string name="action_sort_check_attendance">Check Attendance</string>
    <string name="action_sort_perfect_score">Perfect Score</string>
    <string name="action_sort_submission_due_date">Due Date</string>
    <string name="current_tab">Current</string>
    <string name="past_tab">Past</string>
    <string name="info_tab">Info</string>
    <string name="items_tab">Activities</string>
    <string name="students_tab">Students</string>
    <string name="item_info_tab">Activity Info</string>
    <string name="student_records_tab">Records</string>
    <string name="student_info_tab">Student Info</string>
    <string name="student_items_tab">Activities</string>
    <string name="pref_category_security_title">Security</string>
    <string name="pref_category_app_data_title">Application Data</string>
    <string name="pref_category_misc_title">Misc.</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary">About this app.</string>
    <string name="pref_lock_enabled_title">Lock Enabled</string>
    <string name="pref_lock_enabled_summary">Require a password to unlock on startup.</string>
    <string name="pref_academic_terms_title">Academic Terms</string>
    <string name="pref_academic_terms_summary">Academic terms for classes.</string>
    <string name="pref_academic_terms_dialog_title">Academic Term</string>
    <string name="pref_class_item_types_title">Class Activities</string>
    <string name="pref_class_item_types_summary">Activities for classes.</string>
    <string name="pref_class_item_types_dialog_title">Class Activity</string>
    <string name="pref_unlock_password_title">Unlock Password</string>
    <string name="pref_unlock_password_summary">Change unlock password.</string>
    <string name="pref_time_start_title">Default Time Start</string>
    <string name="pref_time_start_summary">Default Time Start for schedules.</string>
    <string name="pref_student_name_display_format_title">Student Name Display Format</string>
    <string name="pref_student_name_display_format_summary">How student names are displayed.</string>
    <string name="pref_last_name_first_name">[Last Name], [First Name] [Middle Initial].</string>
    <string name="pref_first_name_last_name">[First Name] [Middle Initial] [Last Name].</string>
    <string name="unlock_password_hint">Unlock Password</string>
    <string name="unlock_button">Unlock</string>
    <string name="protect_password_hint">Protect Password</string>
    <string name="unlock_class">Password Protected Class</string>
    <string name="lock_class">Password Protect Class</string>
    <string name="apply_lock_button">Set Password</string>
    <string name="remove_lock_button">Remove Password</string>
    <string name="fragment_status_class_password_protection_applied">Class password protection applied!</string>
    <string name="fragment_status_class_password_protection_removed">Class password protection removed!</string>
    <string name="fragment_status_incorrect_password">Incorrect unlock password!</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="change_button">Change</string>
    <string name="close_button">Close</string>
    <string name="pref_status_incorrect_password">Incorrect current password!</string>
    <string name="pref_status_password_cleared">Unlock password cleared!</string>
    <string name="pref_status_password_changed">Unlock password changed!</string>
    <string name="new_">New</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="type_new_entry">Type new entry</string>
    <string name="add_button">Add</string>
    <string name="save_button">Save</string>
    <string name="yes_button">Yes</string>
    <string name="cancel_button">Cancel</string>
    <string name="no_button">No</string>
    <string name="fragment_status_blank_entry">Entry cannot be blank!</string>
    <string name="new_class_details">New Class Details</string>
    <string name="edit_class_details">Edit Class Details</string>
    <string name="code_hint">Class Code</string>
    <string name="description_hint">Description</string>
    <string name="academic_term_hint">Academic Term</string>
    <string name="year_hint">Year</string>
    <string name="current">Current</string>
    <string name="past">Past</string>
    <string name="fragment_status_code_required">Code cannot be blank.</string>
    <string name="fragment_status_description_required">Description cannot be blank.</string>
    <string name="remove_class">Remove Class</string>
    <string name="remove_class_warning">Warning! All data associated with this class will be deleted permanently. This action cannot be undone.</string>
    <string name="fragment_status_class_removed">Class, activities, and all records have been removed.</string>
    <string name="new_class_schedule">New Class Schedule</string>
    <string name="edit_class_schedule">Edit Class Schedule</string>
    <string name="remove_class_schedule">Remove Class Schedule</string>
    <string name="time_start_hint">Time Start</string>
    <string name="time_end_hint">Time End</string>
    <string name="days_hint">Days</string>
    <string name="room_hint">Room</string>
    <string name="building_hint">Building</string>
    <string name="campus_hint">Campus</string>
    <string name="clear_button">Clear</string>
    <string name="set_button">Set</string>
    <string name="fragment_status_time_start_required">Time Start cannot be blank.</string>
    <string name="new_class_note">New Class Note</string>
    <string name="edit_class_note">Edit Class Note</string>
    <string name="remove_class_note">Remove Class Note</string>
    <string name="note_date_hint">Note Date</string>
    <string name="note_char_limit_hint">(140 characters limit)</string>
    <string name="characters_left">character(s) left.</string>
    <string name="fragment_status_note_required">Note cannot be blank.</string>
    <string name="fragment_status_note_date_required">Note Date cannot be blank.</string>
    <string name="days_mf">M-F</string>
    <string name="days_mwf">MWF</string>
    <string name="days_tth">TTh</string>
    <string name="days_mon">Mon</string>
    <string name="days_tue">Tue</string>
    <string name="days_wed">Wed</string>
    <string name="days_thu">Thu</string>
    <string name="days_fri">Fri</string>
    <string name="days_sat">Sat</string>
    <string name="days_sun">Sun</string>
    <string name="days_m">M</string>
    <string name="days_t">T</string>
    <string name="days_w">W</string>
    <string name="days_th">Th</string>
    <string name="days_f">F</string>
    <string name="days_s">S</string>
    <string name="days_su">Su</string>
    <string name="days_monday">Monday</string>
    <string name="days_tuesday">Tuesday</string>
    <string name="days_wednesday">Wednesday</string>
    <string name="days_thursday">Thursday</string>
    <string name="days_friday">Friday</string>
    <string name="days_saturday">Saturday</string>
    <string name="days_sunday">Sunday</string>
    <string name="details">Details</string>
    <string name="current_past_hint">Current/Past</string>
    <string name="schedule">Schedule</string>
    <string name="notes">Notes</string>
    <string name="item_details">Details</string>
    <string name="item_summary">Summary</string>
    <string name="item_notes">Notes</string>
    <string name="student_details">Details</string>
    <string name="new_class_item">New Class Activity</string>
    <string name="edit_class_item">Edit Class Activity</string>
    <string name="item_type_hint">Choose Activity</string>
    <string name="item_type_none">None</string>
    <string name="item_date_hint">Activity Date</string>
    <string name="check_attendance_label">Check Attendance?</string>
    <string name="check_attendance_hint">Check Attendance</string>
    <string name="record_scores">Record Student Scores?</string>
    <string name="perfect_score_hint">Perfect Score</string>
    <string name="perfect_score_label">Perfect Score:</string>
    <string name="score_label">Score:</string>
    <string name="record_submissions">Record Student Submissions?</string>
    <string name="submission_due_date_hint">Due Date</string>
    <string name="submission_due_date_label">Due Date:</string>
    <string name="submission_date_label">Submission Date:</string>
    <string name="fragment_status_item_description_required">Description cannot be blank.</string>
    <string name="fragment_status_item_date_required">Activity Date cannot be blank.</string>
    <string name="fragment_status_perfect_score_required">Perfect score cannot be blank.</string>
    <string name="fragment_status_submission_due_date_required">Due Date cannot be blank.</string>
    <string name="remove_class_item">Remove Class Activity</string>
    <string name="remove_class_item_warning">Warning! All data associated with this activity will be deleted permanently. This action cannot be undone.</string>
    <string name="fragment_status_class_item_removed">Activity and all records have been removed from this class.</string>
    <string name="new_student">New Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="remove_student">Remove Student</string>
    <string name="remove_student_warning">Warning! All records associated with this student for this class will be deleted permanently. This action cannot be undone.</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="middle_name_hint">Middle Name</string>
    <string name="email_address_hint">Email Address</string>
    <string name="contact_no_hint">Contact No.</string>
    <string name="gender_hint">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="fragment_status_last_name_required">Last Name cannot be blank.</string>
    <string name="existing_students">Students From Other Classes</string>
    <string name="no_students_found">No students found.</string>
    <string name="developer_name">Developer:</string>
    <string name="poly_bug">Poly Bug</string>
    <string name="developer_email">Email:</string>
    <string name="gmail">polybugger@gmail.com</string>
    <string name="app_site">App Website:</string>
    <string name="appengine_site">https://apollo-1263.appspot.com/</string>
</resources>