<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_new_item"
        android:title="@string/action_new_item"
        android:icon="@drawable/ic_add_white_36dp"
        android:orderInCategory="10"
        app:showAsAction="always" />

    <item
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_white_36dp"
        android:orderInCategory="11"
        app:showAsAction="always" >

        <menu>

            <item
                android:id="@+id/action_sort_description"
                android:title="@string/action_sort_description" />

            <item
                android:id="@+id/action_sort_date"
                android:title="@string/action_sort_date" />

            <item
                android:id="@+id/action_sort_activity"
                android:title="@string/action_sort_activity" />

            <item
                android:id="@+id/action_sort_check_attendance"
                android:title="@string/action_sort_check_attendance" />

            <item
                android:id="@+id/action_sort_perfect_score"
                android:title="@string/action_sort_perfect_score" />

            <item
                android:id="@+id/action_sort_submission_due_date"
                android:title="@string/action_sort_submission_due_date" />

        </menu>

    </item>

</menu>
