<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_white_36dp"
        android:orderInCategory="11"
        app:showAsAction="always" >

        <menu>

            <item
                android:id="@+id/action_sort_last_name"
                android:title="@string/action_sort_last_name" />

            <item
                android:id="@+id/action_sort_first_name"
                android:title="@string/action_sort_first_name" />

            <item
                android:id="@+id/action_sort_attendance"
                android:title="@string/action_sort_attendance" />

            <item
                android:id="@+id/action_sort_score"
                android:title="@string/action_sort_score" />

            <item
                android:id="@+id/action_sort_submission_date"
                android:title="@string/action_sort_submission_date" />

        </menu>

    </item>

</menu>
