<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:title="@string/action_new"
        android:icon="@drawable/ic_add_white_36dp"
        android:orderInCategory="10"
        app:showAsAction="always" >

        <menu>

            <item
                android:id="@+id/action_new_schedule"
                android:title="@string/action_new_schedule" />

            <item
                android:id="@+id/action_new_grade_breakdown"
                android:title="@string/action_new_grade_breakdown" />

            <item
                android:id="@+id/action_new_note"
                android:title="@string/action_new_note" />

        </menu>

    </item>

</menu>
