<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_normal_margin"
        android:layout_marginLeft="@dimen/left_normal_margin"
        android:layout_marginRight="@dimen/right_normal_margin"
        android:textSize="@dimen/large_text_size"
        android:text="@string/days_hint"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_marginTop="@dimen/top_normal_margin"
        android:layout_marginLeft="@dimen/left_normal_margin"
        android:layout_marginRight="@dimen/right_normal_margin"
        android:layout_marginBottom="@dimen/bottom_normal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox android:id="@+id/m_checkbox"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_monday"
            android:textSize="@dimen/normal_text_size" />

        <CheckBox android:id="@+id/t_checkbox"
            android:layout_alignBaseline="@id/m_checkbox"
            android:layout_toRightOf="@id/m_checkbox"
            android:layout_marginLeft="@dimen/left_normal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_tuesday"
            android:textSize="@dimen/normal_text_size" />

        <CheckBox android:id="@+id/w_checkbox"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/m_checkbox"
            android:layout_marginTop="@dimen/top_normal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_wednesday"
            android:textSize="@dimen/normal_text_size" />

        <CheckBox android:id="@+id/th_checkbox"
            android:layout_alignBaseline="@id/w_checkbox"
            android:layout_toRightOf="@id/w_checkbox"
            android:layout_marginLeft="@dimen/left_normal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_thursday"
            android:textSize="@dimen/normal_text_size" />

        <CheckBox android:id="@+id/f_checkbox"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/w_checkbox"
            android:layout_marginTop="@dimen/top_normal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_friday"
            android:textSize="@dimen/normal_text_size" />

        <CheckBox android:id="@+id/s_checkbox"
            android:layout_alignBaseline="@id/f_checkbox"
            android:layout_toRightOf="@id/f_checkbox"
            android:layout_marginLeft="@dimen/left_normal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_saturday"
            android:textSize="@dimen/normal_text_size" />

        <CheckBox android:id="@+id/su_checkbox"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/f_checkbox"
            android:layout_marginTop="@dimen/top_normal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_sunday"
            android:textSize="@dimen/normal_text_size" />

    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/cancel_button" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/set_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/set_button" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>

</ScrollView>
