<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ClassActivity">

    <item
        android:id="@+id/action_lock"
        android:title="@string/action_lock"
        android:icon="@drawable/ic_action_secure"
        android:orderInCategory="9997"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_unlock"
        android:title="@string/action_unlock"
        android:icon="@drawable/ic_action_not_secure"
        android:orderInCategory="9998"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="9999"
        app:showAsAction="ifRoom" />

</menu>
