<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical" >

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_normal_margin"
            android:layout_marginLeft="@dimen/left_normal_margin"
            android:layout_marginRight="@dimen/right_normal_margin"
            android:text="@string/new_student"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />
        <View style="@style/TitleBorderBottom"
            android:layout_marginLeft="@dimen/left_normal_margin"
            android:layout_marginRight="@dimen/right_normal_margin"
            android:layout_marginBottom="@dimen/bottom_normal_margin_3" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="@dimen/top_normal_margin"
            android:layout_marginLeft="@dimen/left_normal_margin"
            android:layout_marginRight="@dimen/right_normal_margin"
            android:layout_marginBottom="@dimen/bottom_normal_margin"
            android:orientation="vertical" >
        
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/last_name_hint"
                android:textSize="@dimen/normal_text_size" />
        
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_normal_margin"
                android:inputType="textPersonName"
                android:hint="@string/first_name_hint"
                android:textSize="@dimen/normal_text_size" />
        
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/middle_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_normal_margin"
                android:inputType="textPersonName"
                android:hint="@string/middle_name_hint"
                android:textSize="@dimen/normal_text_size" />
        
            <RadioGroup 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_normal_margin"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/female_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/female" />
                
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/male_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_normal_margin"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/male" />

            </RadioGroup>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_normal_margin"
                android:inputType="textWebEmailAddress"
                android:hint="@string/email_address_hint"
                android:textSize="@dimen/normal_text_size" />
        
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/contact_no_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_normal_margin"
                android:inputType="phone"
                android:hint="@string/contact_no_hint"
                android:textSize="@dimen/normal_text_size" />
            
        </android.support.v7.widget.LinearLayoutCompat>
        
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/cancel_button" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/add_save_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/add_button" />
        
        </android.support.v7.widget.LinearLayoutCompat>
    
    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>
